<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeBack"
        android:gravity="left"
        android:layout_margin="@dimen/title_size"
        android:textSize="@dimen/title_size"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/welcomeBack"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_login_LR"
        android:id="@+id/login_components"
        android:layout_below="@+id/welcomeBack">
   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="@dimen/margin_login_top"
       android:id="@+id/email"
       android:background="@drawable/edittextbackground"
       android:hint="@string/email"
       android:drawableRight="@drawable/ic_baseline_email_24"

       />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_login_top"
        android:id="@+id/password"
        android:layout_marginTop="@dimen/margin_login_top"
        android:background="@drawable/edittextbackground"
        android:hint="@string/password"
        android:drawableRight="@drawable/ic_baseline_vpn_key_24"

        />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_components"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgotPassword"
                android:gravity="left"
                android:layout_margin="@dimen/margin_login_LR"
                android:textSize="@dimen/forgotPassword"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:gravity="right"
                android:layout_margin="@dimen/margin_login_LR"
                android:textSize="@dimen/forgotPassword"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorPrimaryDark"/>


        </RelativeLayout>
    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:id="@+id/signIn"
        />



</RelativeLayout>