<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SplashScreen"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/text_app_name"
        android:gravity="left"
        android:layout_margin="10dp"
        android:textAllCaps="true"
        android:textSize="@dimen/title_size"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_tagline"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/text_app_name_tag"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/tagLine_size"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@+id/text_app_name"
        />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/travel"
        android:layout_gravity="center"
        android:layout_below="@+id/text_app_name_tag"
        android:id="@+id/splash_logo"
        android:layout_marginRight="20dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_button"
        android:layout_below="@+id/splash_logo"
        android:layout_margin="20dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:id="@+id/continue_button"
        />


</RelativeLayout>