<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.OneRoundTripFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textInputlayout_margin"
            app:boxBackgroundColor="@color/white"
            android:hint="@string/from"
            >
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/from_dropdown"
                tools:ignore="LabelFor"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="@dimen/textInputlayout_text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textInputlayout_margin"
            app:boxBackgroundColor="@color/white"
            android:hint="@string/to"
            >

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/to_dropdown"
                tools:ignore="LabelFor"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="@dimen/textInputlayout_text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textInputlayout_margin"
            app:boxBackgroundColor="@color/white"
            android:id="@+id/departInputLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/departDate"
                android:id="@+id/departDate"
                android:textSize="@dimen/textInputlayout_text"
                android:textStyle="bold"
                android:editable="false"
                android:textColor="@color/colorAccent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="@dimen/width_weight"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textInputlayout_margin"
                android:layout_weight="1"
                app:boxBackgroundColor="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/passanger"
                    android:id="@+id/passanger"
                    android:textSize="@dimen/textInputlayout_text"
                    android:textStyle="bold"
                    android:inputType="number"
                    android:textColor="@color/colorAccent"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="@dimen/width_weight"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textInputlayout_margin"
                android:layout_weight="1"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/seat"
                >

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/seat_dropdown"
                    tools:ignore="LabelFor"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="@dimen/textInputlayout_text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_margin="20dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:id="@+id/signIn"
            />

    </LinearLayout>


</FrameLayout>